swagger organization
